--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,13 +111,12 @@ jobs:
           if: always()
           run:  |
             gradle grade
-
         - name: Send output to next Job
-          - run: mkdir -p job_output
+          run: mkdir -p job_output
 
-          - run: echo ${{steps.GatorGrader.outputs.stdout}} > job_output/outputs.txt
+          run: echo ${{steps.GatorGrader.outputs.stdout}} > job_output/outputs.txt
 
-          - uses: actions/upload-artifact@master
+          uses: actions/upload-artifact@master
             with:
               name: my-artifact
               path: path/to/artifact
