Add test print statement

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,3 +111,4 @@ jobs:
           run: |
             mkdir -p job_output
             echo ${{steps.GatorGrader.outputs.stdout}} > job_output/outputs.txt
+            cat job_output/outputs.txt
