--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,3 +112,5 @@ jobs:
             mkdir -p job_output
             echo ${{steps.GatorGrader.outputs.stdout}} > job_output/outputs.txt
             cat job_output/outputs.txt
+        - name: Test gathering output
+          run: echo ${{steps.GatorGrader.outputs.stdout}}
