--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,19 +102,24 @@ jobs:
           run: |
             gradle --version
         # Run GatorGrader: see config/gatorgrader.yml
-        - name: Set up outputfile
-          run:  | 
-            echo "${{ github.repository }}" > output.txt
-            cat output.txt
         - name: Run GatorGrader
           id: gatorgrade
           if: always()
           run:  |
-            MY_STRING=$(echo $(gradle grade))
+            gradle grade
+
+        - name: Set up outputfile
+          run:  | 
+            echo "${{ github.repository }}" > output.txt
+            cat output.txt
+
+        - name: Gather GatorGrader Output
+          run:  |
+            MY_STRING=$(gradle grade)
             MY_STRING="${MY_STRING//'%'/'%25'}"
             MY_STRING="${MY_STRING//$'\n'/'%0A'}"
             MY_STRING="${MY_STRING//$'\r'/'%0D'}"
-            echo "::set-output name=content::$MY_STRING"
+            echo "::set-output name=content::$MY_STRING" >> output.txt
 
         - name: Display Output
           run: cat output.txt
