--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -120,7 +120,7 @@ jobs:
 
         - name: Fetch Upload Repo
           if: always()
-          uses: actions/checkout@master
+          uses: actions/checkout@v2
           with: 
             repository: GatorCAT/GatorCATUpload
         
