--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,11 +123,12 @@ jobs:
           uses: actions/checkout@v2
           with: 
             repository: GatorCAT/GatorCATUpload
+            path: ./Mongo_Upload
         
         - name: Upload to MongoDB
           if: always()
           run:  |
-            cd GatorCATUpload
+            cd Mongo_Upload
             poetry install
             poetry run python upload_to_mongo.py Output.txt ${{secrets.MONGO_USERNAME}} ${{secrets.MONGO_PASSWORD}} ${{secrets.MONGO_CLUSTER_NAME}} ${{secrets.MONGO_COLLECTION_NAME}}
 
