--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,6 +109,7 @@ jobs:
             gradle grade
 
         - name: Set up outputfile
+          if: always()
           run:  | 
             echo "${{ github.repository }}" > output.txt
             cat output.txt
@@ -129,8 +130,10 @@ jobs:
           if: always()
           run:  |
             cd Mongo_Upload
-            poetry install
-            poetry run python upload_to_mongo.py Output.txt ${{secrets.MONGO_USERNAME}} ${{secrets.MONGO_PASSWORD}} ${{secrets.MONGO_CLUSTER_NAME}} ${{secrets.MONGO_COLLECTION_NAME}}
+            pip install typer
+            pip install pymongo
+            python upload_to_mongo.py Output.txt ${{secrets.MONGO_USERNAME}} ${{secrets.MONGO_PASSWORD}} ${{secrets.MONGO_CLUSTER_NAME}} ${{secrets.MONGO_COLLECTION_NAME}}
 
         - name: Display Output
+          if: always()
           run: cat output.txt
