--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,10 +135,9 @@ jobs:
             Collection_name: ${{secrets.MONGO_COLLECTION_NAME}}
           run:  |
             cd Mongo_Upload
-            ls
             pip install typer
             pip install pymongo
-            python Upload_to_mongo.py Output.txt env.Username env.Password env.Cluster_name env.Collection_name
+            python Upload_to_mongo.py ../Output.txt env.Username env.Password env.Cluster_name env.Collection_name
 
         - name: Display Output
           if: always()
