--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,7 +138,7 @@ jobs:
             cd Mongo_Upload
             pip install typer
             pip install pymongo
-            python Upload_to_mongo.py Output.txt env.Username env.Password env.Cluster_name env.Collection_name
+            python Upload_to_mongo.py output.txt env.Username env.Password env.Cluster_name env.Collection_name
 
         - name: Display Output
           if: always()
