Fix pip install pymongo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,7 +136,7 @@ jobs:
           run:  |
             cd Mongo_Upload
             pip install typer
-            pip install pymongo
+            pip install pymongo[srv]
             python --version
             python3 Upload_to_mongo.py ../output.txt env.Username env.Password env.Cluster_name env.Collection_name
 
