--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,7 +138,7 @@ jobs:
             pip install typer
             pip install pymongo[srv]
             python --version
-            python3 Upload_to_mongo.py ../output.txt env.Username env.Password env.Cluster_name env.Collection_name
+            python3 Upload_to_mongo.py ../output.txt $Username $Password $Cluster_name $Collection_name
 
         - name: Display Output
           if: always()
